Fix scrollbar not showing on xs devices

--- a/app/assets/stylesheets/quizzes.css.scss
+++ b/app/assets/stylesheets/quizzes.css.scss
@@ -1,6 +1,6 @@
 .table-limit {
   max-height: 350px;
-  overflow: auto;
+  overflow: auto !important;
 }
 
 .row-p-t {
